==> xsw2019/face_recognition/Hardware/OV7670.c <==
#include "OV7670.h"
#include "gd32f4xx.h"
#include "systick.h"
#include "LCD.h"
#define OV7670_REG_NUM  184

void OV7670_GPIO_Init(void)
{
	//时钟使能
	rcu_periph_clock_enable(RCU_GPIOA);	
	rcu_periph_clock_enable(RCU_GPIOB);	
	rcu_periph_clock_enable(RCU_GPIOC);	
    rcu_periph_clock_enable(RCU_GPIOD);	
    rcu_periph_clock_enable(RCU_GPIOG);	

	//配置摄像头外部时钟-PA8
	gpio_af_set(GPIOA, GPIO_AF_0, GPIO_PIN_8);
	gpio_mode_set(GPIOA, GPIO_MODE_AF, GPIO_PUPD_NONE, GPIO_PIN_8);
	gpio_output_options_set(GPIOA, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, GPIO_PIN_8);
	/* enable SYSCFG clock */
	rcu_periph_clock_enable(RCU_SYSCFG);  
	/* choose DIV2 to get 4MHz from 16MHz on CKOUT0 pin (PA8) to clock the PHY */
	rcu_ckout0_config(RCU_CKOUT0SRC_HXTAL, RCU_CKOUT0_DIV1);

	//RST-PB3-3.3v
	gpio_mode_set(GPIOB,GPIO_MODE_OUTPUT,GPIO_PUPD_NONE,GPIO_PIN_3);
	gpio_output_options_set(GPIOB,GPIO_OTYPE_PP,GPIO_OSPEED_MAX,GPIO_PIN_3);
	gpio_bit_set(GPIOB,GPIO_PIN_3);

	//PWDN-PB4-GND
	gpio_mode_set(GPIOB,GPIO_MODE_OUTPUT,GPIO_PUPD_NONE,GPIO_PIN_4);
	gpio_output_options_set(GPIOB,GPIO_OTYPE_PP,GPIO_OSPEED_MAX,GPIO_PIN_4);
	gpio_bit_reset(GPIOB,GPIO_PIN_4);
    
    // /* configure DCI_PIXCLK(PA6), DCI_VSYNC(PG9), DCI_HSYNC(PA4), DCI_D0(PC6), DCI_D1(PC7)
    //              DCI_D2(PC8), DCI_D3(PC9), DCI_D4(PC11), DCI_D5(PD3), DCI_D6(PB8), DCI_D7(PB9) */
    // gpio_mode_set(GPIOA, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, GPIO_PIN_4);//HS-PA4
    // gpio_mode_set(GPIOA, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, GPIO_PIN_6);//PCLK-PA6
    // gpio_mode_set(GPIOG, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, GPIO_PIN_9);//VS-PG9
    
    // gpio_mode_set(GPIOC, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, GPIO_PIN_6);
    // gpio_mode_set(GPIOC, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, GPIO_PIN_7);
    // gpio_mode_set(GPIOC, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, GPIO_PIN_8);
    // gpio_mode_set(GPIOC, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, GPIO_PIN_9);
    // gpio_mode_set(GPIOC, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, GPIO_PIN_11);
    
    // gpio_mode_set(GPIOB, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, GPIO_PIN_8);
    // gpio_mode_set(GPIOB, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, GPIO_PIN_9);
    
    // gpio_mode_set(GPIOD, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, GPIO_PIN_3);
}

void OV7670_Init(void)
{
	int i;
	OV7670_GPIO_Init();
	dci_config();
    SCCB_Init();
	for(i=0;i<OV7670_REG_NUM;i++)
	{
		OV7670_WriteReg(OV7670_reg[i][0],OV7670_reg[i][1]);
	}		
}

uint8_t OV7670_VS(void)
{
	if(gpio_input_bit_get(GPIOG,GPIO_PIN_9)==SET)
	{
		return 1; 
	}
	if(gpio_input_bit_get(GPIOG,GPIO_PIN_9)==RESET)
	{
		return 0; 
	}	
}

uint8_t OV7670_HREF(void)
{
	if(gpio_input_bit_get(GPIOA,GPIO_PIN_4)==SET)
	{
		return 1; 
	}
	if(gpio_input_bit_get(GPIOA,GPIO_PIN_4)==RESET)
	{
		return 0; 
	}	
}

uint8_t OV7670_PCLK(void)
{
	if(gpio_input_bit_get(GPIOA,GPIO_PIN_6)==SET)
	{
		return 1; 
	}
	if(gpio_input_bit_get(GPIOA,GPIO_PIN_6)==RESET)
	{
		return 0; 
	}	
}

void OV7670_config_window(uint16_t startx,uint16_t starty,uint16_t width, uint16_t height)
{
    uint16_t endx=(startx+width*2)%784;
    uint16_t endy=(starty+height*2);
    uint8_t x_reg, y_reg;
    uint8_t state,temp;

    x_reg = OV7670_ReadReg(0x32);
    x_reg &=  0xC0;
    y_reg = OV7670_ReadReg(0x03);
    y_reg &=  0xF0;

    //设置 HREF
    temp = x_reg|((endx&0x7)<<3)|(startx&0x7);
    OV7670_WriteReg(0x32, temp );
    temp = (startx&0x7F8)>>3;
    OV7670_WriteReg(0x17, temp );
    temp = (endx&0x7F8)>>3;
    OV7670_WriteReg(0x18, temp );

    //设置 VREF
    temp = y_reg|((endy&0x3)<<2)|(starty&0x3);
    OV7670_WriteReg(0x03, temp );
    temp = (starty&0x3FC)>>2;
    OV7670_WriteReg(0x19, temp );
    temp = (endy&0x3FC)>>2;
    OV7670_WriteReg(0x1A, temp );
}
