==> qcao2003/stm32f103c8t6_standard/Stm32F103_UART - OV7670 - FireUart - noFIFO/Hardware/OV7670.c <==
#include "OV7670.h"
#include "ov7670config.h"

uint8_t OV7670_VS(void)
{
	return GPIO_ReadInputDataBit(GPIOB,GPIO_Pin_13);
}

uint8_t OV7670_HREF(void)
{
    return GPIO_ReadInputDataBit(GPIOB,GPIO_Pin_14);
}

uint8_t OV7670_PCLK(void)
{
    return GPIO_ReadInputDataBit(GPIOB,GPIO_Pin_15);
}

void OV7670_GPIO_Init(void)
{
		//设置IO     	   
	GPIO_InitTypeDef  GPIO_InitStruct;                   /* 结构体定义 */
	//PB3 PWDN PB4 RST
	//@RST                3.3V                     0：RESET模式    1：一般模式
	//@PWNN                GND                        0：工作         1：POWER DOWN
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
	//GPIOB3,4初始化设置
	GPIO_InitStruct.GPIO_Pin = GPIO_Pin_3|GPIO_Pin_4;//PB3,4推挽输出
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_Out_PP; //推挽输出
	GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;//50MHz
	GPIO_Init(GPIOB, &GPIO_InitStruct);//初始化
	
	/* VS HREF 和 PCLK IO口初始化 */
//	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);        /* GPIOB使能 */
//	GPIO_EXTILineConfig(GPIO_PortSourceGPIOA, GPIO_PinSource15);	//PA15 连接到中断线1

	GPIO_InitStruct.GPIO_Pin=GPIO_Pin_13 | GPIO_Pin_14 | GPIO_Pin_15;                   /* PB13,14,15 */
	GPIO_InitStruct.GPIO_Mode=GPIO_Mode_IPU;                   /* 上拉输入 */
	GPIO_InitStruct.GPIO_Speed=GPIO_Speed_50MHz;                   /*  50MHz*/
	GPIO_Init(GPIOB,&GPIO_InitStruct); 
	
	/* D0-D7 IO口初始化 */
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);        /* GPIOA使能 */

	GPIO_InitStruct.GPIO_Pin=0xFF;                   /* PA0-PA7 */
	GPIO_InitStruct.GPIO_Mode=GPIO_Mode_IPU;                   /* 上拉输入 */
	GPIO_InitStruct.GPIO_Speed=GPIO_Speed_50MHz;                   /*  50MHz*/
	GPIO_Init(GPIOA,&GPIO_InitStruct); 
	
	GPIO_WriteBit(GPIOB, GPIO_Pin_3, Bit_RESET); //PWNN                GND
	GPIO_WriteBit(GPIOB, GPIO_Pin_4, Bit_SET);	//RST                3.3V 
}

u8 OV7670_Init(void)
{ 
	u16 i=0;
	u16 reg;
	OV7670_GPIO_Init();
	OV7670_PWDN_L;	//POWER ON
	Delay_ms(10);
	OV7670_RST_L;	//复位OV7670
	Delay_ms(10);
	OV7670_RST_H;	//结束复位 
	SCCB_Init();        		//初始化SCCB 的IO口	 
	SCCB_WR_Reg(0X12, 0x80);	//软复位OV7670
	Delay_ms(50); 
	reg=SCCB_RD_Reg(0X1C);	//读取厂家ID 高八位
	reg<<=8;
	reg|=SCCB_RD_Reg(0x1D);	//读取厂家ID 低八位
	
	if(reg!=OV7670_MID)
	{
		printf("MID:0X%X\r\n",reg);
		return 1;
	}
	reg=SCCB_RD_Reg(0x0A);	//读取厂家ID 高八位
	reg<<=8;
	reg|=SCCB_RD_Reg(0x0B);	//读取厂家ID 低八位
	if(reg!=OV7670_PID)
	{
		printf("HID:0X%X\r\n",reg);
		return 2;
	}   
	
	//初始化 OV7670,采用QVGA分辨率(320*240)  
	for(i=0;i<sizeof(ov7670_init_reg_tb1)/sizeof(ov7670_init_reg_tb1[0]);i++)
	{
	   	SCCB_WR_Reg(ov7670_init_reg_tb1[i][0], ov7670_init_reg_tb1[i][1]);
			
 	} 
//	OV7670_Light_Mode(3);
//	OV7670_Color_Saturation(2);
//	OV7670_Brightness(2);
//	OV7670_Contrast(2);
//	OV7670_Special_Effects(0);
	
//	OV7670_config_window(200,50,160,128);
	
//	OV7670_Self_Window_Set();
	
//	OV7670_config_window(4,0,320,240);
	
	printf("OV7670init is Successful\r\n");
	
	return 0x00; 	//ok
}

void OV7670_config_window(u16 startx,u16 starty,u16 width,u16 height)
{
	u16 endx =(startx+width*2);
	u16 endy =(starty+height*2);
	u8 x_reg,y_reg;
	u8 temp;
	if(endx>784)endx = endx % 784;
	if(endy>784)endy = endy % 784;
	x_reg=SCCB_RD_Reg(0x32);
	x_reg&=0xC0;
	y_reg=SCCB_RD_Reg(0x03);
	y_reg&=0xF0;
	//设置HREF
	temp=x_reg|((endx&0x7)<<3)|(startx&0x7);
	SCCB_WR_Reg(0x32,temp);
	temp=(startx&0x7F8)>>3;
	SCCB_WR_Reg(0x17,temp);
	temp=(endx&0x7F8)>>3;
	SCCB_WR_Reg(0x18,temp);
	//设置VREF
	temp=y_reg|((endy&0x3)<<2)|(starty&0x3);
	SCCB_WR_Reg(0x03,temp);
	temp=(starty&0x3FC)>>2;
	SCCB_WR_Reg(0x19,temp);
	temp=(endy&0x3FC)>>2;
	SCCB_WR_Reg(0x1A,temp);
}
